--- a/client/global.css
+++ b/client/global.css
@@ -355,6 +355,51 @@ table.userscript-table {
     float: right;
 }
 
+.userscript-updates-modal {
+    display: none;
+    background: none repeat scroll 0% 0% white;
+    padding: 10px;
+    border-radius: 10px 10px 10px 10px;
+    width: 300px;
+}
+    .userscript-updates-modal > .header {
+        margin: 0px 0px 20px 10px;
+    }
+        .userscript-updates-modal > .header h1 {
+            font-weight: normal;
+            font-family: "Adobe Garamond Pro",Garamond,Baskerville,"Baskerville Old Face","Hoefler Text","Times New Roman",serif;
+            line-height: 1em;
+            margin: 10px 0px 0px;
+            font-size: 1.4em;
+        }
+
+    .userscript-updates-modal > .body {
+        margin: 10px 0px;
+    }
+    .userscript-updates-modal > .footer {
+        margin: 0px 10px 0px 0px;
+    }
+    .userscript-updates-modal .userscript-btn {
+        font-size: 12px;
+        padding: 3px 10px;
+        border-radius: 12px;
+    }
+    .userscript-updates-modal .userscript-btn.active {
+        font-size: 12px;
+        padding: 3px 10px;
+        border-radius: 12px;
+    }
+    .userscript-updates-modal .userscript-btn.btn-success {
+        font-size: 12px;
+        padding: 3px 10px;
+        border-radius: 12px;
+    }
+    .userscript-updates-modal .userscript-btn.btn-danger {
+        font-size: 12px;
+        padding: 3px 10px;
+        border-radius: 12px;
+    }
+
 .userscript-pull-left {
     float: left;
 }
