--- a/client/less/colorfix.less
+++ b/client/less/colorfix.less
@@ -4,7 +4,7 @@
     License: LGPL http://www.gnu.org/licenses/lgpl.html  */
 
 html body {
-    background: url("http://cdn.leagueoflegends.com/lolkit/1.0.27/resources/images/bg-default.jpg" ) repeat fixed 0 0 transparent !important;
+    //background: url("http://cdn.leagueoflegends.com/lolkit/1.0.27/resources/images/bg-default.jpg" ) repeat fixed 0 0 transparent !important;
 }
 
 .post-row {
@@ -61,8 +61,9 @@ html body {
     }
 }
 
-.backdrop {
-    display: none !important;
-    background-color: none;
-    background-image: none;
-}
+// .backdrop { position: fixed; } better way to keep background scrolling
+//.backdrop {
+//    display: none !important;
+//    background-color: none;
+//    background-image: none;
+//}
